--- a/08-HTML/homework/styles.css
+++ b/08-HTML/homework/styles.css
@@ -1,9 +1,24 @@
+html {
+    min-height: 100%;
+    background-image: url(./imagen.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    display: flex;
+    justify-content: center;
+}
+
+
 h1 {
     color: darkgoldenrod;
+    display: flex;
+    justify-content: center;
 }
 
 img {
     width: 400px;
+    display: flex;
+    justify-content: center;
 }
 
 #thirdDiv {
@@ -13,9 +28,13 @@ img {
     padding: 50px;
     border-width: 10px;
     border-color: darkgoldenrod;
+    display: flex;
+    justify-content: center;
 }
 
 #spanId {
     font-size: 18px;
     margin: 50px;
+    display: flex;
+    justify-content: center;
 }
